--- a/styles/style.less
+++ b/styles/style.less
@@ -1,7 +1,18 @@
-table, td {
-    border: 1px solid black;
+html {
+    background: rgb(15, 200, 7);
 }
+
+table {
+    border-collapse: collapse;
+    background: white;
+}
+
 td {
     width: 30px;
-    min-height: 30px;
+    height: 30px;
+    border: 2px solid black;
+}
+
+.black {
+    background: black;
 }
